tests/paczka1/fuzzy1/72506294.err
Error in line 5: hU6V50f S701 2,0
Error in line 2: fDr9 A934 9,7
Error in line 7: hU6V50f A711 77,5
Error in line 17: fDr9 S701 217,0
Error in line 37: fGCj8F S195 13,5
